11-ingress/deployment/ingress-multi-path.yml
apiVersion: v1
kind: Pod
metadata:
  name: friends-ing-pod
  labels:
    app: friends-ing-app
spec:
  containers:
    - image: friends-service:0.3.0
      name: friends
      ports: [ { containerPort: 8000 } ]
---
apiVersion: v1
kind: Pod
metadata:
  name: friends-ing-pod-legacy
  labels:
    app: friends-ing-app-legacy
spec:
  containers:
    - image: friends-service:0.1.0
      name: friends
      ports: [ { containerPort: 8000 } ]
---
apiVersion: v1
kind: Service
metadata:
  name: friends-ing-service
spec:
  type: ClusterIP
  selector:
    app: friends-ing-app
  ports:
    - port: 80
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: friends-ing-service-legacy
spec:
  type: ClusterIP
  selector:
    app: friends-ing-app-legacy
  ports:
    - port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: friends-ing-basic
spec:
  rules:
    - host: friends.show
      http:
        paths:
          - path: /friends-basic
            pathType: Prefix
            backend:
              service:
                name: friends-ing-service
                port:
                  number: 80
          - path: /legacy/friends-basic
            pathType: Prefix
            backend:
              service:
                name: friends-ing-service-legacy
                port:
                  number: 80
