11-ingress/deployment/ingress-url-rewrite.yml
apiVersion: v1
kind: Pod
metadata:
  name: friends-ing-host-pod
  labels:
    app: friends-ing-host-app
spec:
  containers:
    - image: friends-service:0.1.0
      name: friends
      ports: [ { containerPort: 8000 } ]
---
apiVersion: v1
kind: Service
metadata:
  name: friends-ing-host-service
spec:
  type: ClusterIP
  selector:
    app: friends-ing-host-app
  ports:
    - port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: friends-ing-host
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: traefik # explicitly set class name
  rules:
    - host: friends.show
      http:
        paths:
          - path: /friends-basic/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: friends-ing-host-service
                port:
                  number: 80
